--- a/front/src/css/login.css
+++ b/front/src/css/login.css
@@ -3,9 +3,10 @@
 /* Formato a la imagen de la planta */
 .formatoPlanta {
     background-image: url(../imagenes/belstar-planta.jpg);
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 10px;
     max-width: 750px;
     max-height: 900px;
+    margin-top: 10px;
 }
 
 
@@ -21,6 +22,7 @@
     font-size: 24px;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
+    margin-top: 10px;
 }
 
 .formatologo {
