--- a/front/src/css/login.css
+++ b/front/src/css/login.css
@@ -13,7 +13,7 @@
 /* Formato al bloque de los input */
 .contenedorIngreso {
     max-width: 740px;
-    padding: 60px 60px 0 60px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
