Se redistribuyen las opciones de la barra de navegación.

--- a/front/src/css/componentesComunes.css
+++ b/front/src/css/componentesComunes.css
@@ -71,6 +71,10 @@
     margin-right: 5px;
 }
 
+.formatoTituloMenu {
+    margin-left: 20px;
+}
+
 .formatoMenu {
     font-family: 'Gill Sans MT', sans-serif;
     font-weight: bold;
